# AlphaGateWay-SDK

./: .env  .env.sample  .gitignore  Dockerfile  LICENSE  README  docker-compose.yml  example.py  pyproject.toml
_sdk/: client.py  models.py  state_manager.py  state_provider.py
_shared/: config.py  database_module.py  redis_module.py
sdk/: client.py  exceptions.py  models.py  state_manager.py  state_provider.py
shared/: database_module.py
