[project]
name = "alphas"
version = "0.1.0"
description = "HFT Alpha Strategies for Gateway V3"
authors = [
    {name = "Bobby", email = "bobbyax.work@example.com"}
]
readme = "README.md"
requires-python = "^3.10"

dependencies = [
    # --- BASE DEPENDENCIES (KEEP 100%) ---
    "pandas (>=2.3.0,<3.0.0)",
    "python-binance (>=1.0.29,<2.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "websocket-client (>=1.8.0,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "numpy (>=1.26.0,<2.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "redis>=5.0.0,<6.0.0",
    "hiredis>=2.3.0,<3.0.0",
    #------ Lib version v.03 --------
    "httpx>=0.27.0",
    "pydantic>=2.7.0", 
    "pydantic-settings>=2.2.1",
    "python-dotenv>=1.0.1",   
    "ujson>=5.10.0"           
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
